Fixed Czech translation by Lucas Lommer
Thanks goes to Vladimir Burian.

--- a/po/cs.po
+++ b/po/cs.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-06-07 20:46+0200\n"
-"PO-Revision-Date: 2009-05-29 17:02+0200\n"
+"POT-Creation-Date: 2009-06-21 20:57+0200\n"
+"PO-Revision-Date: 2009-06-16 01:18+0200\n"
 "Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
 "Language-Team: Czech <gnome-cs-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -2464,15 +2464,15 @@ msgstr "Při přesunu souboru do %F došlo k chybě."
 
 #: ../libnautilus-private/nautilus-file-operations.c:4963
 msgid "Creating links in \"%B\""
-msgstr "Vytvářím odkazy v \"%B\""
+msgstr "Vytváří se odkazy v \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:4967
 #, c-format
 msgid "Making link to %'d file"
 msgid_plural "Making links to %'d files"
-msgstr[0] "Vytvářím odkazy k %'d souboru"
-msgstr[1] "Vytvářím odkazy k %'d souborům"
-msgstr[2] "Vytvářím odkazy k %'d souborům"
+msgstr[0] "Vytváří se odkaz k %'d souboru"
+msgstr[1] "Vytváří se odkazy k %'d souborům"
+msgstr[2] "Vytváří se odkazy k %'d souborům"
 
 #: ../libnautilus-private/nautilus-file-operations.c:5096
 msgid "Error while creating link to %B."
@@ -5148,7 +5148,7 @@ msgstr "Oprávnění vybraného souboru nebylo možné zjistit."
 
 #: ../src/file-manager/fm-properties-window.c:5431
 msgid "Creating Properties window."
-msgstr "Vytvářím okno vlastností."
+msgstr "Vytváří se okno vlastností."
 
 #: ../src/file-manager/fm-properties-window.c:5721
 msgid "Select Custom Icon"
@@ -5836,7 +5836,7 @@ msgstr "Nelze načíst informace o obrázku"
 
 #: ../src/nautilus-image-properties-page.c:574
 msgid "loading..."
-msgstr "načítám..."
+msgstr "načítá se..."
 
 #: ../src/nautilus-image-properties-page.c:630
 msgid "Image"
