Updating Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -22,9 +22,9 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-06-18 15:18+0000\n"
-"PO-Revision-Date: 2009-06-19 14:55+0300\n"
-"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
+"POT-Creation-Date: 2009-06-22 13:04+0000\n"
+"PO-Revision-Date: 2009-06-24 23:24+0300\n"
+"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2042,10 +2042,9 @@ msgstr ""
 msgid "This file cannot be mounted"
 msgstr "Seda faili pole võimalik külge haakida"
 
-#, fuzzy
 #| msgid "This file cannot be mounted"
 msgid "This file cannot be started"
-msgstr "Seda faili pole võimalik külge haakida"
+msgstr "Seda faili pole võimalik käivitada"
 
 #, c-format
 msgid "Slashes are not allowed in filenames"
@@ -2525,10 +2524,9 @@ msgstr "Märgi _usaldusväärseks"
 msgid "Unable to mount location"
 msgstr "Asukohta pole võimalik külge haakida"
 
-#, fuzzy
 #| msgid "Unable to mount location"
 msgid "Unable to start location"
-msgstr "Asukohta pole võimalik külge haakida"
+msgstr "Asukohta pole võimalik käivitada"
 
 #, c-format
 msgid "Opening \"%s\"."
@@ -3267,16 +3265,14 @@ msgstr "Valitud kettaseadme vormindamine"
 #. name, stock id
 #. label, accelerator
 #. Adjust start/stop items to reflect the type of the drive
-#, fuzzy
 #| msgid "_Software:"
 msgid "_Start"
-msgstr "_Tarkvara:"
+msgstr "_Käivita"
 
 #. tooltip
-#, fuzzy
 #| msgid "Format the selected volume"
 msgid "Start the selected volume"
-msgstr "Valitud kettaseadme vormindamine"
+msgstr "Valitud andmeruumi käivitamine"
 
 #. name, stock id
 #. label, accelerator
@@ -3284,10 +3280,9 @@ msgid "_Stop"
 msgstr "_Peata"
 
 #. tooltip
-#, fuzzy
 #| msgid "Mount the selected volume"
 msgid "Stop the selected volume"
-msgstr "Valitud kettaseadme haakimine"
+msgstr "Valitud andmeruumi peatamine"
 
 #. tooltip
 msgid "Mount the volume associated with the open folder"
@@ -3306,16 +3301,14 @@ msgid "Format the volume associated with the open folder"
 msgstr "Avatud kataloogiga seotud kettaseadme vormindamine"
 
 #. tooltip
-#, fuzzy
 #| msgid "Format the volume associated with the open folder"
 msgid "Start the volume associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme vormindamine"
+msgstr "Käivitab avatud kaustaga seotud andmeruumi"
 
 #. tooltip
-#, fuzzy
 #| msgid "Mount the volume associated with the open folder"
 msgid "Stop the volume associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme haakimine"
+msgstr "Seiskab avatud kaustaga seotud andmeruumi"
 
 #. name, stock id
 #. label, accelerator
@@ -3398,16 +3391,14 @@ msgid "Format the volume associated with this folder"
 msgstr "Selle kataloogiga seotud kettaseadme vormindamine"
 
 #. tooltip
-#, fuzzy
 #| msgid "Format the volume associated with this folder"
 msgid "Start the volume associated with this folder"
-msgstr "Selle kataloogiga seotud kettaseadme vormindamine"
+msgstr "Käivitab selle kaustaga seotud andmeruumi"
 
 #. tooltip
-#, fuzzy
 #| msgid "Mount the volume associated with this folder"
 msgid "Stop the volume associated with this folder"
-msgstr "Selle kataloogiga seotud kettaseadme haakimine"
+msgstr "Seiskab selle kaustaga seotud andmeruumi"
 
 #. tooltip
 msgid "View or modify the properties of this folder"
@@ -3462,122 +3453,103 @@ msgid_plural "Move the selected items out of the trash"
 msgstr[0] "Valitud kirje prügikastist väljatõstmine"
 msgstr[1] "Valitud kirjete prügikastist väljatõstmine"
 
-#, fuzzy
 #| msgid "Format the selected volume"
 msgid "Start the select drive"
-msgstr "Valitud kettaseadme vormindamine"
+msgstr "Käivitab valitud ketta"
 
-#, fuzzy
 #| msgid "Mount the selected volume"
 msgid "Connect to the selected drive"
-msgstr "Valitud kettaseadme haakimine"
+msgstr "Ühendab valitud kettale"
 
 msgid "_Start Multi-disk Drive"
-msgstr ""
+msgstr "_Käivita mitmekettaseade"
 
 msgid "Start the selected multi-disk drive"
-msgstr ""
+msgstr "Mitmekettaseadme käivitamine"
 
 msgid "U_nlock Drive"
-msgstr ""
+msgstr "_Võta ketas lukust lahti"
 
-#, fuzzy
 #| msgid "Unmount the selected volume"
 msgid "Unlock the selected drive"
-msgstr "Valitud kettaseadme lahtihaakimine"
+msgstr "Lukustab valitud ketta lahti"
 
-#, fuzzy
 #| msgid "Mount the selected volume"
 msgid "Stop the selected drive"
-msgstr "Valitud kettaseadme haakimine"
+msgstr "Seiskab valitud ketta"
 
-#, fuzzy
 #| msgid "C_ancel Remove"
 msgid "_Safely Remove Drive"
-msgstr "T_ühista eemaldamine"
+msgstr "_Eemalda ketas turvaliselt"
 
-#, fuzzy
 #| msgid "Format the selected volume"
 msgid "Safely remove the selected drive"
-msgstr "Valitud kettaseadme vormindamine"
+msgstr "Valitud kettaseadme turvaline eemaldamine"
 
-#, fuzzy
 #| msgid "_Connect"
 msgid "_Disconnect"
-msgstr "Ü_hendu"
+msgstr "Ü_henda lahti"
 
-#, fuzzy
 #| msgid "Mount the selected volume"
 msgid "Disconnect the selected drive"
-msgstr "Valitud kettaseadme haakimine"
+msgstr "Valitud kettaseadme lahtiühendamine"
 
 msgid "_Stop Multi-disk Drive"
-msgstr ""
+msgstr "_Seiska mitmekettaseade"
 
 msgid "Stop the selected multi-disk drive"
-msgstr ""
+msgstr "Mitmekettaseadme seiskamine"
 
 msgid "_Lock Drive"
-msgstr ""
+msgstr "_Lukusta ketas"
 
-#, fuzzy
 #| msgid "Mount the selected volume"
 msgid "Lock the selected drive"
-msgstr "Valitud kettaseadme haakimine"
+msgstr "Valitud kettaseadme lukustamine"
 
-#, fuzzy
 #| msgid "Format the volume associated with the open folder"
 msgid "Start the drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme vormindamine"
+msgstr "Avatud kataloogiga seotud kettaseadme käivitamine"
 
-#, fuzzy
 #| msgid "Mount the volume associated with the open folder"
 msgid "Connect to the drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme haakimine"
+msgstr "Avatud kataloogiga seotud kettaseadme ühendamine"
 
-#, fuzzy
 #| msgid "Format the volume associated with the open folder"
 msgid "Start the multi-disk drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme vormindamine"
+msgstr "Avatud kataloogiga seotud mitmekettaseadme käivitamine"
 
 #. stop() for type G_DRIVE_START_STOP_TYPE_PASSWORD is normally not used
 msgid "_Unlock Drive"
-msgstr ""
+msgstr "_Võta ketas lukust lahti"
 
-#, fuzzy
 #| msgid "Unmount the volume associated with the open folder"
 msgid "Unlock the drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme lahtihaakimine"
+msgstr "Avatud kataloogiga seotud kettaseadme lukust lahti võtmine"
 
-#, fuzzy
 #| msgid "Mount the volume associated with the open folder"
 msgid "_Stop the drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme haakimine"
+msgstr "Avatud kataloogiga seotud kettaseadme _seiskamine"
 
-#, fuzzy
 #| msgid "Format the volume associated with the open folder"
 msgid "Safely remove the drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme vormindamine"
+msgstr "Avatud kataloogiga seotud kettaseadme turvaline eemaldamine"
 
-#, fuzzy
 #| msgid "Mount the volume associated with the open folder"
 msgid "Disconnect the drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme haakimine"
+msgstr "Avatud kataloogiga seotud kettaseadme lahtiühendamine"
 
-#, fuzzy
 #| msgid "Mount the volume associated with the open folder"
 msgid "Stop the multi-disk drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme haakimine"
+msgstr "Avatud kataloogiga seotud mitmekettaseadme seiskamine"
 
-#, fuzzy
 #| msgid "Mount the volume associated with the open folder"
 msgid "Lock the drive associated with the open folder"
-msgstr "Avatud kataloogiga seotud kettaseadme haakimine"
+msgstr "Avatud kataloogiga seotud kettaseadme lukustamine"
 
-#, fuzzy
 #| msgid "Format the selected volume"
 msgid "Start the selected drive"
-msgstr "Valitud kettaseadme vormindamine"
+msgstr "Valitud kettaseadme käivitamine"
 
 #. add the "open in new window" menu item
 msgid "Open in New _Window"
@@ -4983,24 +4955,23 @@ msgstr "Võrk"
 msgid "_Power On"
 msgstr "_Lülita sisse"
 
-#, fuzzy
 #| msgid "_Connect"
 msgid "_Connect Drive"
-msgstr "Ü_hendu"
+msgstr "Ü_henda ketas"
 
 msgid "_Disconnect Drive"
-msgstr ""
+msgstr "_Ühenda ketas lahti"
 
 msgid "_Start Multi-disk Device"
-msgstr ""
+msgstr "_Käivita mitmekettaseade"
 
 msgid "_Stop Multi-disk Device"
-msgstr ""
+msgstr "_Seiska mitmekettaseade"
 
-#, fuzzy, c-format
+#, c-format
 #| msgid "Unable to mount %s"
 msgid "Unable to start %s"
-msgstr "%s külgehaakimine pole võimalik"
+msgstr "%s käivitamine pole võimalik"
 
 #, c-format
 msgid "Unable to poll %s for media changes"
