Updating Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -5356,7 +5356,8 @@ msgstr ""
 "Allan Sims <allsi@eau.ee>, 2003.\n"
 "Sven Sapelson <sven.sapelson@gmail.com>,2005.\n"
 "Priit Laes <plaes+gi18n@plaes.org>, 2004-2008.\n"
-"Ivar Smolin <okul@linux.ee>, 2005-2009."
+"Ivar Smolin <okul@linux.ee>, 2005-2009.\n"
+"Mattias Põldaru <mahfiaz@gmail.com>, 2009."
 
 msgid "Nautilus Web Site"
 msgstr "Nautiluse veebisait"
