--- a/po/es.po
+++ b/po/es.po
@@ -19,19 +19,20 @@
 # Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2004, 2005, 2006.
 # Jorge González <jorgegonz@svn.gnome.org>, 200, 200, 2009.
 # Juanje Ojeda Croissier <jojeda@emergya.es>, 2009.
+# Jorge González <jorgegonz@svn.gnome.org>, 2009.
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: eel.HEAD.es\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-05-01 18:17+0000\n"
-"PO-Revision-Date: 2009-05-03 19:26+0200\n"
-"Last-Translator: Juanje Ojeda Croissier <jojeda@emergya.es>\n"
+"POT-Creation-Date: 2009-06-21 18:58+0000\n"
+"PO-Revision-Date: 2009-07-07 20:30+0200\n"
+"Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bits\n"
+"Content-Transfer-Encoding: 8bit\n"
 "#-#-#-#-#  es.po (nautilus.HEAD)  #-#-#-#-#\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 "X-Generator: KBabel 1.11.4\n"
@@ -6299,7 +6300,7 @@ msgstr "Usar distribución co_mpacta"
 
 #: ../src/nautilus-file-management-properties.ui.h:97
 msgid "_View executable text files when they are opened"
-msgstr "_Ver los archivos de texto ejecutables cuando al abrirlos"
+msgstr "_Ver los archivos de texto ejecutables al abrirlos"
 
 #: ../src/nautilus-history-sidebar.c:324
 msgid "History"
