--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Major changes in 2.27.4 are:
+* Add support for starting and stopping drives
+* Use the new GVfs metadata framework
+* Support new style unmount operations; this will provide a nice dialog when
+  unmounting a busy drive mount
+* Add application icons to the Open With context menu
+* Reload xdg-user-dirs according to the user preferences
+
 Major changes in 2.27.2 are:
 * Support ctrl-drop in list view
 * Allow user defined keyboard shortcuts for extension items
