Updated Gujarati Translations

--- a/po/gu.po
+++ b/po/gu.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: nautilus.gnome-2-26.gu\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-04-30 10:03+0000\n"
-"PO-Revision-Date: 2009-07-13 02:12-0400\n"
+"PO-Revision-Date: 2009-07-14 05:31-0400\n"
 "Last-Translator: Sweta Kothari <swkothar@redhat.com>\n"
 "Language-Team: Gujarati\n"
 "MIME-Version: 1.0\n"
@@ -3249,7 +3249,7 @@ msgid ""
 "No other applications are available to view this file.  If you copy this "
 "file onto your computer, you may be able to open it."
 msgstr ""
-"આ ફાઇલને જોવા માટે બીજા કોઇ કાર્યક્રમો પ્રાપ્ત નથી. જો તમે આ ફાઇલની તમારા કમ્પ્યૂટરમાં "
+"આ ફાઇલને જોવા માટે બીજા કોઇ કાર્યક્રમો પ્રાપ્ત નથી. જો તમે આ ફાઇલની તમારા કોમ્પ્યુટરમાં "
 "નકલ કરો, તો કદાચ તે ખોલી શકો."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:121
@@ -3257,7 +3257,7 @@ msgid ""
 "No other actions are available to view this file.  If you copy this file "
 "onto your computer, you may be able to open it."
 msgstr ""
-"આ ફાઇલને જોવા માટે બીજા કોઇ કાર્યક્રમો પ્રાપ્ત નથી. જો તમે આ ફાઇલની તમારા કમ્પ્યૂટરમાં "
+"આ ફાઇલને જોવા માટે બીજા કોઇ કાર્યક્રમો પ્રાપ્ત નથી. જો તમે આ ફાઇલની તમારા કોમ્પ્યુટરમાં "
 "નકલ કરો, તો કદાચ તે ખોલી શકો."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:372
@@ -3325,7 +3325,7 @@ msgstr "\"%s\" માટે શોધ કરો"
 #: ../libnautilus-private/nautilus-undo-signal-handlers.c:174
 #: ../src/nautilus-query-editor.c:983
 msgid "Edit"
-msgstr "ફેરફાર"
+msgstr "ફેરફાર કરો"
 
 #: ../libnautilus-private/nautilus-undo-signal-handlers.c:175
 msgid "Undo Edit"
@@ -6710,7 +6710,7 @@ msgstr "ઘર ફોલ્ડર (_H)"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:844
 msgid "_Computer"
-msgstr "કમ્પ્યૂટર (_C)"
+msgstr "કૅમ્પ્યુટર (_C)"
 
 #. name, stock id
 #. label, accelerator
@@ -6824,7 +6824,7 @@ msgstr "મૂળભૂત જેટલું મોટું કરો"
 
 #: ../src/nautilus-zoom-control.c:888
 msgid "Zoom"
-msgstr "નાનુમોટુ કરો"
+msgstr "નાનુમોટુ"
 
 #: ../src/nautilus-zoom-control.c:894
 msgid "Set the zoom level of the current view"
