--- a/po/et.po
+++ b/po/et.po
@@ -22,9 +22,9 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-07-18 14:34+0000\n"
-"PO-Revision-Date: 2009-07-20 15:16+0300\n"
-"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
+"POT-Creation-Date: 2009-07-21 14:59+0000\n"
+"PO-Revision-Date: 2009-07-22 11:20+0300\n"
+"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgstr "Fail pole korrektne .desktop fail"
 
 #, c-format
 msgid "Unrecognized desktop file Version '%s'"
-msgstr "Tundmatu töölauafaili verisoon '%s'"
+msgstr "Tundmatu töölauafaili versioon '%s'"
 
 #, c-format
 msgid "Starting %s"
@@ -2898,7 +2898,7 @@ msgid "The folder \"%s\" contains more files than Nautilus can handle."
 msgstr "Kataloog \"%s\" sisaldab rohkem faile, kui Nautilus suudab käsitleda."
 
 msgid "Some files will not be displayed."
-msgstr "Osasid faile ei kuvata."
+msgstr "Mõningaid faile ei kuvata."
 
 #, c-format
 msgid "Open with %s"
@@ -3000,10 +3000,8 @@ msgstr "Asukohta pole võimalik lahti haakida"
 msgid "Unable to eject location"
 msgstr "Asukohta pole võimalik väljastada"
 
-#, fuzzy
-#| msgid "Unable to stop %s"
 msgid "Unable to stop drive"
-msgstr "%s seiskamine pole võimalik"
+msgstr "Ketta seiskamine pole võimalik"
 
 #, c-format
 msgid "Connect to Server %s"
@@ -3107,10 +3105,8 @@ msgstr "Iga valitud kirje avamine kataloogiaknas"
 
 #. name, stock id
 #. label, accelerator
-#, fuzzy
-#| msgid "Open with Other _Application..."
 msgid "Other _Application..."
-msgstr "_Ava mõne muu rakendusega..."
+msgstr "_Muu rakendus..."
 
 #. tooltip
 msgid "Choose another application with which to open the selected item"
@@ -3312,10 +3308,8 @@ msgid "_Detect Media"
 msgstr "_Tuvasta meedia"
 
 #. tooltip
-#, fuzzy
-#| msgid "Connect to the selected drive"
 msgid "Detect media in the selected drive"
-msgstr "Ühendab valitud kettale"
+msgstr "Tuvastab andmekandja valitud seadmes"
 
 #. tooltip
 msgid "Mount the volume associated with the open folder"
@@ -3585,10 +3579,9 @@ msgstr "Avatud kataloogi jäädavalt kustutamine"
 msgid "Move the open folder to the Trash"
 msgstr "Avatud kataloogi prügikasti viskamine"
 
-#, fuzzy, c-format
-#| msgid "Open with %s"
+#, c-format
 msgid "_Open with %s"
-msgstr "Ava programmiga %s"
+msgstr "_Ava programmiga %s"
 
 #, c-format
 msgid "Open in %'d New _Window"
