--- a/po/et.po
+++ b/po/et.po
@@ -23,8 +23,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-07-21 14:59+0000\n"
-"PO-Revision-Date: 2009-07-22 11:20+0300\n"
-"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
+"PO-Revision-Date: 2009-07-27 13:03+0300\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1811,10 +1811,10 @@ msgid "The destination is read-only."
 msgstr "Sihtkoht on kirjutuskaitsega."
 
 msgid "Moving \"%B\" to \"%B\""
-msgstr "\"%B\" liigutamine sihtkohta \"%B\""
+msgstr "\"%B\" ümbertõstmine sihtkohta \"%B\""
 
 msgid "Copying \"%B\" to \"%B\""
-msgstr "\"%B\" kopeerimine asukohta \"%B\""
+msgstr "\"%B\" kopeerimine sihtkohta \"%B\""
 
 msgid "Duplicating \"%B\""
 msgstr "\"%B\" dubleerimine"
